# cvm-

./: .gitignore  CMakeLists.txt  EvenSemProjects_extracted.txt  README.md  cvm  test_compiler  test_opcode  test_vm
.github/workflows/: ci.yml
docs/: roadmap.md
include/: ast.h  compiler.h  lexer.h  opcode.h  parser.h  token.h  value.h  vm.h
scripts/: arithmetic.cvm  booleans.cvm  comparison.cvm  control_flow.cvm  edge_cases.cvm  fibonacci.cvm  hello.cvm  if_else.cvm  input_output.cvm  variables.cvm  while_loop.cvm
src/: compiler.cpp  lexer.cpp  main.cpp  opcode.cpp  parser.cpp  vm.cpp
tests/: test_compiler.cpp  test_lexer.cpp  test_opcode.cpp  test_parser.cpp  test_vm.cpp
